@@ -13,6 +13,8 @@
 - onsubmit="return false" was added to p4a_mask form
 - a bugfix on P4A_DB_Source::getNumRows() with group by was done
 - some error checks were added to P4A_DB_Source::getNumRows()
+- a bug on P4A_DB_Source::getFilters() was fixed
+- some code has been beautified
 
 1.99.10
 - TinyFCK was updated to 0.16 (TinyMCE 2.0.8)
